; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_deprecated.c_svn_client_log2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_deprecated.c_svn_client_log2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@svn_opt_revision_unspecified = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_client_log2(i32* %0, %struct.TYPE_7__* %1, %struct.TYPE_7__* %2, i32 %3, i32 %4, i32 %5, i32 %6, i8* %7, i32* %8, i32* %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_7__*, align 8
  %13 = alloca %struct.TYPE_7__*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca %struct.TYPE_7__, align 4
  store i32* %0, i32** %11, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %12, align 8
  store %struct.TYPE_7__* %2, %struct.TYPE_7__** %13, align 8
  store i32 %3, i32* %14, align 4
  store i32 %4, i32* %15, align 4
  store i32 %5, i32* %16, align 4
  store i32 %6, i32* %17, align 4
  store i8* %7, i8** %18, align 8
  store i32* %8, i32** %19, align 8
  store i32* %9, i32** %20, align 8
  %22 = load i32, i32* @svn_opt_revision_unspecified, align 4
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 0
  store i32 %22, i32* %23, align 4
  %24 = load i32*, i32** %11, align 8
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %13, align 8
  %27 = load i32, i32* %14, align 4
  %28 = load i32, i32* %15, align 4
  %29 = load i32, i32* %16, align 4
  %30 = load i32, i32* %17, align 4
  %31 = load i8*, i8** %18, align 8
  %32 = load i32*, i32** %19, align 8
  %33 = load i32*, i32** %20, align 8
  %34 = call i32* @svn_client_log3(i32* %24, %struct.TYPE_7__* %21, %struct.TYPE_7__* %25, %struct.TYPE_7__* %26, i32 %27, i32 %28, i32 %29, i32 %30, i8* %31, i32* %32, i32* %33)
  ret i32* %34
}

declare dso_local i32* @svn_client_log3(i32*, %struct.TYPE_7__*, %struct.TYPE_7__*, %struct.TYPE_7__*, i32, i32, i32, i32, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
